Revert "TBBA-123 fix for scrollbars on the batch editing tables. need to do more work on this to make the text fields auto expand as there is some weirdness going on .."
This reverts commit 522fd2960e771394a7215d79da2a9940a7ee155c.

--- a/app/styles/edit.scss
+++ b/app/styles/edit.scss
@@ -739,7 +739,7 @@ sca-column .hasSVG {
     margin-top: 22px;
     border-top: 8px solid transparent;
     border-bottom: 8px solid transparent;
-    border-right: 8px solid #D24D57;
+    border-right: 8px solid #c13244;
 }
 .arrow-amber {
     width: 0;
